# SpbSUGameJam19

./: .gitignore  CMakeLists.txt
assets/shader/: alpha.frag  animated.frag  animated.vert  font.frag  font.vert  post.frag  post.vert  sample.frag  sample.vert  simple.frag  simple.vert
src/: MainGame.cpp  MainGame.h  main.cpp
src/game/: GlobalContext.cpp  GlobalContext.h  Scene.cpp  Scene.h
src/game/scenes/episodes/: Episode1.cpp  Episode1.h
src/game/scenes/episodes/episode2/: Ep2Gameplay.cpp  Ep2Gameplay.h  Episode2.cpp  Episode2.h
src/game/scenes/episodes/episode3/: Episode3.cpp  Episode3.h  FinalChoice.cpp  FinalChoice.h
src/game/scenes/menu/: Episodes.cpp  Episodes.h  StartMenu.cpp  StartMenu.h
src/game/scenes/test/: TestScene.cpp  TestScene.h
src/utils/: cameraControl.cpp  cameraControl.h  math.cpp  math.h  resourseManager.cpp  resourseManager.h
